# sleeper-h2h-tools

./: LICENSE  Makefile  README.md  pyproject.toml
.circleci/: config.yml
examples/: h2h_board_df-example.html  h2h_standings_df-example.html  standings_df-example.html
sleeper_h2h/: discord.py  graphics.py  standings.py  utils.py
tests/: mock_data.pkl  test_core.py  test_other.py  test_utils.py  utils.py
