[tool.poetry]
name = "sleeper-h2h-tools"
packages = [ { include = "sleeper_h2h" } ]
version = "0.0.1"
description = "A Python API for calculating head-to-head metrics in Sleeper Fantasy Football leagues and publishing to Discord"
authors = ["Kiran de Silva <kiran.desilva@yahoo.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kirandesilva/sleeper-h2h-tools"
repository = "https://github.com/kirandesilva/sleeper-h2h-tools"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.10"
discord-webhook = "1.3.1"
kaleido = "0.2.1"
numpy = "^1.25.0"
pandas = "^2.0.0"
plotly = "^5.16.0"
sleeper-api-wrapper = "1.1.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
coverage = "6.4.0"
pytest = "7.4.0"
genbadge = {extras = ["coverage", "tests"], version = "^1.1.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
